service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-app
  namespace: nextjs-app
  labels:
    app: nextjs-app
spec:
  type: NodePort
  selector:
    app: nextjs-app
  ports:
    - port: 80
      targetPort: 3000
